2007-09-06  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/ContextXMLServlet.java: synchronize the first 
	call of tryReloadProperties because a race condition can lead to a 
	NullPointerException with servercontext being null.

2007-08-22  Martin Leidig  <mleidig@schlund.de>

	Send webservice authentication error responses in the requested webservice
	protocol instead of simple 500 errors with a text message. Therefore every
	ServiceProcessor has to implement the new method processException. This
	method should write a response containing the passed Exception in the
	according webservice protocol. Besides authentication errors now throw
	a typed Exception, AuthenticationException, which derives the formerly
	used ServiceException.

	Added:
	* src/de/schlund/pfixcore/webservice/AuthenticationException.java

	Modified:
	* src/de/schlund/pfixcore/webservice/ServiceProcessor.java
	* src/de/schlund/pfixcore/webservice/ServiceRuntime.java
	* src/de/schlund/pfixcore/webservice/jsonqx/JSONQXProcessor.java
	* src/de/schlund/pfixcore/webservice/jsonws/JSONWSProcessor.java
	* src/de/schlund/pfixcore/webservice/WebServiceServlet.java
	* src/de/schlund/pfixcore/webservice/ServiceException.java
	* projects/core/script/xmlRequest.js

2007-08-17  Martin Leidig  <mleidig@schlund.de>

	* projects/core/script/webservice.js: Fixed bug: extracted wrong session id 
	from URLs containing anchors and no parameters.

2007-08-15  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/generator/iwrpgen/AptTask.java: increase maximum
	memory for apt to 512MB

2007-08-10  Martin Leidig  <mleidig@schlund.de>

	* skel/build-skel.xml: Moved the webservice ant task definition into its
	own target and made the webservice target depending on it. Thus the webservice
	task is loaded by its own classloader and not the one that is used by the other 
	tasks. This ensures that at instantiation time all necessary libraries are