@@ -1,3 +1,11 @@
+2007-09-06  Sebastian Marsching  <sebastian.marsching@1und1.de>
+
+	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java: 
+	* src/de/schlund/pfixcore/workflow/ContextImpl.java: 
+	Fixed an exception occurring when the Context#isAuthorized() method was 
+	called and the context had not been authenticated yet.
+	
+
 2007-09-06  Martin Leidig  <mleidig@schlund.de>
 
 	* src/de/schlund/pfixxml/ContextXMLServlet.java: synchronize the first 
